--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <p>DRESS CODE: CASUAL</p>
-        <p>MENU: HOT POT</p>
+        <p>MENU: BBQ</p>
 
         <div class="footer">
             <p>This invitation was created by sadelda</p>
