--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>6pm</p>
             </div>
             <div class="adress">
-                <p>Milan's house</p>
+                <p>Lenka's house</p>
             </div>
         </div>
 
